# ptensor

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  library.properties
src/: CMakeLists.txt  README.md  pTensor.h
src/pTensor/: CMakeLists.txt
src/pTensor/allocators/: arenaAllocator.cpp  arenaAllocator.hpp
src/pTensor/contexts/: default_context.cpp
src/pTensor/core/: CMakeLists.txt  TensorMap.cpp  TensorMap.hpp  context.cpp  context.hpp  errorHandler.cpp  errorHandler.hpp  memoryManagementInterface.cpp  memoryManagementInterface.hpp  modelBase.cpp  modelBase.hpp  operatorBase.cpp  operatorBase.hpp  pTensor_util.cpp  pTensor_util.hpp  ptensor_string.hpp  quantizationPrimitives.cpp  quantizationPrimitives.hpp  tensor.cpp  tensor.hpp  tensorBase.cpp  tensorBase.hpp  types.hpp  uPAL.hpp
src/pTensor/errorHandlers/: SimpleErrorHandler.cpp  SimpleErrorHandler.hpp
src/pTensor/loaders/: tensorIdxImporter.cpp  tensorIdxImporter.hpp
src/pTensor/ops/reference/: AddOperator.hpp  ArgMaxOperator.hpp  ArgMinOperator.hpp  AvgPoolOperator.hpp  ConvolutionOperator.hpp  FullyConnectedOperator.hpp  LogisticOperator.hpp  MatrixMultiplyOperator.cpp  MatrixMultiplyOperator.hpp  MaxOperator.hpp  MaxPoolOperator.hpp  MinOperator.hpp  MinPoolOperator.hpp  ReLuOperator.hpp  ReduceOperator.hpp  ReshapeOperator.hpp  SigmoidOperator.hpp  SoftMaxOperator.hpp  SqueezeOperator.hpp  TransposeOperator.hpp  activationOpBase.hpp  genericPoolOpBase.hpp  mathOpBase.hpp
src/pTensor/ops/tflm/: DequantizeOperator.hpp  QuantizeOperator.hpp  convolution2d.cpp  convolution2d.hpp  convolution_helper.cpp  convolution_helper.hpp  depthwise_separable_convolution.cpp  depthwise_separable_convolution.hpp  depthwise_separable_convolution_kernels.cpp  depthwise_separable_convolution_kernels.hpp  fully_connected.cpp  fully_connected.hpp  fully_connected_kernel.cpp  fully_connected_kernel.hpp  gemmlowp.cpp  gemmlowp.hpp  s_quantized_convolution_kernels.hpp  symmetric_quantization_utils.cpp  symmetric_quantization_utils.hpp  tflm_defs.hpp
src/pTensor/tensors/: BufferTensor.cpp  BufferTensor.hpp  RamTensor.cpp  RamTensor.hpp  RomTensor.cpp  RomTensor.hpp
src/pTensor/util/: math_utils.hpp  quantization_utils.cpp  quantization_utils.hpp
tests/: CMakeLists.txt  README.md  test_helper.h
tests/allocators/: test_arenaAllocator.cpp
tests/core/: test_context.cpp  test_quantization_params.cpp
tests/core/context/: test_core_context.cpp
tests/core/tensor/: test_core_binarytensor.cpp  test_core_sdtensor.cpp  test_core_tensor.cpp
tests/core/tensorIdxImporter/: test_core_tensorIdxImporter.cpp
tests/core/virtualmem/: test_core_virtualmem.cpp
tests/dummy/sanity/: test_dummy_sanity.cpp
tests/error_handlers/: test_errorhandler.cpp
tests/model/: constants_layer_1_quantize.hpp  integration_test.cpp  test_layer_1_quantize.cpp  test_layer_2_dws_conv2d.cpp  test_layer_3_dws_conv2d.cpp  test_layer_4_maxpool.cpp  test_layer_5_qFC.cpp  test_model1.cpp  test_model2.cpp
tests/operators/: test_argmax.cpp  test_argmin.cpp  test_arithmetic.cpp  test_avgpool.cpp  test_convolution_bias.cpp  test_convolution_nobias.cpp  test_dequantize.cpp  test_dws_convolution.cpp  test_fully_connected.cpp  test_matrix.cpp  test_maxpool.cpp  test_quant_fully_connect_2.cpp  test_quantize.cpp  test_quantized_dws_conv.cpp  test_relu.cpp  test_reshape.cpp  test_sq_conv2d.cpp  test_sq_logistic.cpp  test_sq_softmax.cpp  test_sq_tanh.cpp  test_squeeze.cpp  test_transpose.cpp
tests/operators/old_tests/QuantizedMult/: test_operators_QuantizedMult.cpp
tests/operators/old_tests/QuantizedMult/models/: qmul0.cpp  qmul0.hpp  qmul1.cpp  qmul1.hpp  qmul2.cpp  qmul2.hpp  qmul3.cpp  qmul3.hpp  qmul4.cpp  qmul4.hpp
tests/operators/old_tests/arrayOps/: test_operators_arrayOps.cpp
tests/operators/old_tests/basicMath/: test_operators_basicMath.cpp
tests/operators/old_tests/fusedconvmaxpool/: test_operators_fusedconvmaxpool.cpp
tests/operators/old_tests/matrix/: test_operators_matrix.cpp
tests/operators/old_tests/quantizedAdd/: test_operators_quantizedAdd.cpp
tests/operators/old_tests/quantizedAdd/models/: add_graph.cpp  add_graph.hpp
tests/tensors/: test_buffertensor.cpp  test_ramtensor.cpp  test_romtensor.cpp
tutorials/custom_operator/: CMakeLists.txt  custom_operator.cpp
tutorials/error_handling/: CMakeLists.txt  error_handle.cpp
